<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="413dp"
        android:layout_height="914dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngtree_simple_and_beautiful_blue_and_white_gradient_mobile_phone_wallpaper_background_image_729179" />

    <View
        android:id="@+id/view5"
        android:layout_width="411dp"
        android:layout_height="102dp"
        android:background="#9FCEE6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/cart"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="83dp"
        android:layout_height="64dp"
        android:layout_marginBottom="660dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintEnd_toStartOf="@+id/textView24"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_5358c044bcb1169c810f401c97fcaba" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        app:layout_constraintEnd_toStartOf="@+id/textView26"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintVertical_bias="0.637" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/quentity"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintEnd_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/total_price"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="684dp"
        android:text="@string/PREMIUM"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintEnd_toStartOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="684dp"
        android:text="10"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintEnd_toStartOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="684dp"
        android:text="$50"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/quality"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintEnd_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

</androidx.constraintlayout.widget.ConstraintLayout>